creacion tests y javadoc